data/all_generated_tests/raw_wast_tests/loop_UnreachableCodeExecution_465.wast
;; 6. **Loop Initiated with Unreachable Preceding Branch**:    - **Description**: Create a loop that follows an `unreachable` instruction before any branching.    - **Constraint Checked**: Checks loop initialization and checks for correct handling of preceding unreachable instructions.    - **Unreachable Execution Check**: Ensures initialization correctly traps when preceded by an unreachable instruction.

(assert_invalid
  (module
    (func
      unreachable 
      (loop (param i32) (drop))
    )
  )
  "type mismatch"
)